--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
+.app {
+  width: 100%;
+  max-width: 1100px;
+  margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+li {
+  list-style-type: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a {
+  margin-right: 1rem;
+  color: black;
+  text-decoration: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.active {
+  font-weight: bold;
+  text-decoration: underline;
 }
 
-.App-link {
-  color: #61dafb;
+.label {
+  display: block;
+  margin-bottom: 16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input,
+textarea {
+  display: block;
+  margin-bottom: 1rem;
+  width: 600px;
+  border-radius: 10px;
+  padding: 1rem;
+}
+
+textarea {
+  height: 300px;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+.link-button {
+  max-width: 300px;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 8px 12px;
+  margin-top: 16px;
+  display: inline-block;
 }
